syntax = "proto3";

import "judge_response.proto";
import "judge_request.proto";

service JudgeService {
    rpc Judge(JudgeRequest) returns (JudgeResponse) {}
}
